# SurvArena

./: .gitignore  AGENTS.md  CLOUD_RUN.md  LICENSE  PROJECT_STATE.md  README.md  blueprint.md  pyproject.toml  requirements.txt  survarena.py
.codex/environments/: environment.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
demo/: Foundation_model_GPU.ipynb
docs/: autogluon_backend.md  autogluon_comparison.md  benchmarking_workflow.md  cancer_survival_datasets.md  contributing_datasets.md  contributing_method_adapters.md  datasets.md  discrete_time_hazard_adapter.md  environment.md  environment_smoke_report.md  foundation_models.md  index.md  manuscript_evidence.md  manuscript_publishability.md  manuscript_run_status.md  methods.md  protocol.md  tabular_foundation_models_todo.md  training_strategy.md
examples/: README.md  survival_predictor_quickstart.ipynb
scripts/: audit_manuscript_publishability.py  build_foundation_elo.py  build_manuscript_elo.py  build_no_hpo_benchmark_report.py  build_unified_foundation_elo_figure.py  check_environment.py  clean_local_artifacts.sh  compact_existing_elo_results.py  compare_foundation_adapters.py  merge_cloud_benchmark_shards.py  plot_readme_elo.py  prepare_cancer_survival_datasets.py  run_cloud_benchmark_shard.py  run_cloud_comprehensive.sh  run_manuscript_by_dataset_model.sh  run_smoke_aft_all_datasets.sh  setup_env.sh  update_code_knowledge.sh  validate_benchmark_protocol.sh
src/: __init__.py  cli.py  run_benchmark.py
survarena/: __init__.py  cli.py  config.py  run_benchmark.py
tests/: conftest.py  test_api.py  test_autogluon_backend.py  test_benchmark.py  test_benchmark_determinism.py  test_benchmark_exports.py  test_benchmark_resume.py  test_benchmark_runner.py  test_cli.py  test_cloud_hpo.py  test_compare_api.py  test_data.py  test_dataset_loaders.py  test_deepsurv_moco.py  test_dual_mode_hpo_governance.py  test_evaluation.py  test_foundation.py  test_foundation_catalog.py  test_foundation_methods.py  test_foundation_readiness.py  test_hpo_config.py  test_io_config.py  test_manuscript_report.py  test_manuscript_statistics.py  test_method_adapters.py  test_methods.py  test_metrics_and_tuning.py  test_predictor_edge_cases.py  test_predictor_persistence.py  test_predictor_registry.py  test_preprocess.py  test_presets.py  test_robustness_tracks.py  test_runtime_failure_summary.py  test_statistics.py  test_user_dataset.py  test_validation.py
(+434 files in other folders)
