[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survarena"
version = "0.1.0"
description = "GitHub-first benchmark framework for tabular survival analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SurvArena Contributors" }]
dependencies = []

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
include = ["src*"]
