[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survarena"
version = "0.1.0"
description = "GitHub-first benchmark framework for tabular survival analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SurvArena Contributors" }]
dynamic = ["dependencies"]

[project.scripts]
survarena = "survarena:main"

[tool.setuptools]
package-dir = { "" = "." }
py-modules = ["survarena"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
